[gd_scene load_steps=58 format=3 uid="uid://2oxdgu03lnbk"]

[ext_resource type="Script" path="res://kinematic_fps_controller/kinematic_fps_controller.gd" id="2_8r0nc"]
[ext_resource type="PackedScene" uid="uid://7nghfugqxiqf" path="res://common/metal_impact.tscn" id="2_86agt"]
[ext_resource type="Environment" uid="uid://b3cn01u84faiy" path="res://common/underwater_environment.tres" id="2_owsda"]
[ext_resource type="PackedScene" uid="uid://dvepobheadtv4" path="res://common/tracer.tscn" id="3_83nad"]
[ext_resource type="PhysicsMaterial" path="res://kinematic_fps_controller/physics/grass.tres" id="4_ulqss"]
[ext_resource type="PhysicsMaterial" uid="uid://bklf2cx3fydt3" path="res://kinematic_fps_controller/physics/stone.tres" id="5_a0l7u"]
[ext_resource type="PhysicsMaterial" path="res://kinematic_fps_controller/physics/wood.tres" id="6_ulh2i"]
[ext_resource type="Script" path="res://kinematic_fps_controller/material_audio.gd" id="10_3id2w"]
[ext_resource type="AudioStream" uid="uid://c2cl56b4rns2u" path="res://kinematic_fps_controller/jute-dh-steps/stepdirt_2.wav" id="12_wuy6q"]
[ext_resource type="AudioStream" uid="uid://7gjj4wse1p7s" path="res://kinematic_fps_controller/jute-dh-steps/stepdirt_3.wav" id="13_ydtah"]
[ext_resource type="AudioStream" uid="uid://p8tdym4d3gwm" path="res://kinematic_fps_controller/jute-dh-steps/stepdirt_4.wav" id="14_78mnj"]
[ext_resource type="AudioStream" uid="uid://ds7ryp7lrjkbk" path="res://kinematic_fps_controller/jute-dh-steps/stepstone_8.wav" id="15_oitce"]
[ext_resource type="AudioStream" uid="uid://dygk2exfcwaxj" path="res://kinematic_fps_controller/jute-dh-steps/stepstone_7.wav" id="16_nb44q"]
[ext_resource type="AudioStream" uid="uid://d1824xmt02a32" path="res://kinematic_fps_controller/jute-dh-steps/stepstone_1.wav" id="17_saan7"]
[ext_resource type="AudioStream" uid="uid://cxycqe7hdav7o" path="res://kinematic_fps_controller/jute-dh-steps/stepstone_2.wav" id="18_ljqja"]
[ext_resource type="AudioStream" uid="uid://bfsapqnlf7can" path="res://kinematic_fps_controller/jute-dh-steps/stepwood_1.wav" id="19_0psj7"]
[ext_resource type="AudioStream" uid="uid://bs6mvjbhqmwtp" path="res://kinematic_fps_controller/audios/crouch_1.ogg" id="19_dvqy3"]
[ext_resource type="AudioStream" uid="uid://d1h0by0sl1hin" path="res://kinematic_fps_controller/audios/crouch_2.ogg" id="20_0e40x"]
[ext_resource type="AudioStream" uid="uid://c7fdqytdjvcqe" path="res://kinematic_fps_controller/jute-dh-steps/stepwood_2.wav" id="20_kvx2h"]
[ext_resource type="AudioStream" uid="uid://dyj8811150sq5" path="res://kinematic_fps_controller/jute-dh-steps/stepdirt_1.wav" id="20_qovk2"]
[ext_resource type="AudioStream" uid="uid://btyn2jp6i5s8l" path="res://kinematic_fps_controller/jute-dh-steps/stepwater_1.wav" id="21_1rkt1"]
[ext_resource type="AudioStream" uid="uid://b4yst0b74bmiw" path="res://kinematic_fps_controller/audios/crouch_3.ogg" id="21_8kmms"]
[ext_resource type="AudioStream" uid="uid://b3me04d8q11xf" path="res://kinematic_fps_controller/jute-dh-steps/stepwater_2.wav" id="22_p60vq"]
[ext_resource type="AudioStream" uid="uid://cs7sum38jhlwf" path="res://kinematic_fps_controller/audios/crouch_4.ogg" id="22_rfhmk"]
[ext_resource type="AudioStream" uid="uid://by7roe2rtlr51" path="res://kinematic_fps_controller/audios/uncrouch_1.ogg" id="23_326x3"]
[ext_resource type="PhysicsMaterial" path="res://kinematic_fps_controller/physics/water.tres" id="23_kplyn"]
[ext_resource type="AudioStream" uid="uid://c7pj78vafhema" path="res://kinematic_fps_controller/audios/uncrouch_2.ogg" id="24_knso1"]
[ext_resource type="AudioStream" uid="uid://begnjae7wbr3m" path="res://kinematic_fps_controller/audios/uncrouch_3.ogg" id="25_0xsk3"]
[ext_resource type="PackedScene" uid="uid://cf762veqbirs4" path="res://common/assault_rifle.glb" id="28_e1ex1"]
[ext_resource type="Texture2D" uid="uid://nsrqdm2vli8a" path="res://addons/kenney_particle_pack/muzzle_02.png" id="31_q70iq"]
[ext_resource type="Texture2D" uid="uid://8sg30406ftag" path="res://addons/kenney_particle_pack/magic_05.png" id="32_twhfu"]
[ext_resource type="Texture2D" uid="uid://g6lgbd2idtjd" path="res://addons/kenney_particle_pack/smoke_08.png" id="33_7j817"]
[ext_resource type="Texture2D" uid="uid://dkqlwxq0pqlc8" path="res://ui/blood_vignette.webp" id="33_8itrj"]
[ext_resource type="Script" path="res://ui/blood_vignette.gd" id="34_lxet5"]
[ext_resource type="Texture2D" uid="uid://ce517bxpauorg" path="res://ui/blood_flash.webp" id="35_gwmon"]
[ext_resource type="Texture2D" uid="uid://b8o6731eyjxtr" path="res://ui/crosshair.svg" id="35_xwe6x"]

[sub_resource type="Resource" id="Resource_ju83a"]
script = ExtResource("10_3id2w")
physics_material = ExtResource("4_ulqss")
jump_audio_stream = ExtResource("20_qovk2")
landed_audio_stream = ExtResource("12_wuy6q")
step_audio_streams = Array[AudioStream]([ExtResource("20_qovk2"), ExtResource("12_wuy6q"), ExtResource("13_ydtah"), ExtResource("14_78mnj")])

[sub_resource type="Resource" id="Resource_3rmwo"]
script = ExtResource("10_3id2w")
physics_material = ExtResource("5_a0l7u")
jump_audio_stream = ExtResource("15_oitce")
landed_audio_stream = ExtResource("16_nb44q")
step_audio_streams = Array[AudioStream]([ExtResource("17_saan7"), ExtResource("18_ljqja")])

[sub_resource type="Resource" id="Resource_rfw5k"]
script = ExtResource("10_3id2w")
physics_material = ExtResource("6_ulh2i")
jump_audio_stream = ExtResource("19_0psj7")
landed_audio_stream = ExtResource("20_kvx2h")
step_audio_streams = Array[AudioStream]([ExtResource("19_0psj7"), ExtResource("20_kvx2h")])

[sub_resource type="Resource" id="Resource_kvpuo"]
script = ExtResource("10_3id2w")
physics_material = ExtResource("23_kplyn")
jump_audio_stream = ExtResource("21_1rkt1")
landed_audio_stream = ExtResource("22_p60vq")
step_audio_streams = Array[AudioStream]([ExtResource("21_1rkt1"), ExtResource("22_p60vq")])

[sub_resource type="Curve" id="Curve_l0i00"]
min_value = -1.0
_data = [Vector2(0, 0), 0.0, -0.0429613, 0, 0, Vector2(0.328302, 1), 0.0, 0.0, 0, 0, Vector2(0.709434, -1), 0.0, 0.0, 0, 0, Vector2(0.986956, 0), 0.0349975, 0.0, 0, 0]
point_count = 4

[sub_resource type="Curve" id="Curve_3qcwd"]
_data = [Vector2(0, 0.50243), 0.0, 0.0, 0, 0, Vector2(0.967172, 0.482685), -0.426488, -0.426488, 0, 0, Vector2(0.972222, 0), 0.0, 0.0, 0, 0, Vector2(1, 0.498481), 0.0, 0.0, 0, 0]
point_count = 4

[sub_resource type="Curve" id="Curve_4wj6w"]
_data = [Vector2(0, 0.249071), 0.0, 0.0, 0, 0, Vector2(0.165854, 1), 0.0, 0.0, 0, 0, Vector2(0.273171, 1), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 4

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_fn1rj"]
radius = 0.3
height = 1.7

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_f8tu5"]
resource_local_to_scene = true
transparency = 1
blend_mode = 1
cull_mode = 2
shading_mode = 0
albedo_color = Color(1.476, 1.381, 1.059, 1)
albedo_texture = ExtResource("31_q70iq")

[sub_resource type="PlaneMesh" id="PlaneMesh_8kq7a"]
size = Vector2(1, 1)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_a6b2b"]
resource_local_to_scene = true
transparency = 1
blend_mode = 1
cull_mode = 2
shading_mode = 0
albedo_color = Color(1.476, 1.381, 1.059, 1)
albedo_texture = ExtResource("32_twhfu")

[sub_resource type="PlaneMesh" id="PlaneMesh_h6ix3"]
size = Vector2(1, 1)

[sub_resource type="Curve" id="Curve_ptkh4"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_7yq5w"]
curve = SubResource("Curve_ptkh4")

[sub_resource type="Curve" id="Curve_2b2ln"]
min_value = 2.13163e-14
max_value = 0.2
_data = [Vector2(0, 2.13163e-14), 0.0, 0.28, 0, 0, Vector2(1, 0.2), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_oucc8"]
curve = SubResource("Curve_2b2ln")

[sub_resource type="Curve" id="Curve_8lrmi"]
_data = [Vector2(0, 0.182156), 0.0, 0.0, 0, 0, Vector2(1, 1), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_st3no"]
curve = SubResource("Curve_8lrmi")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_6lf27"]
lifetime_randomness = 0.19
angle_max = 360.0
angle_curve = SubResource("CurveTexture_oucc8")
direction = Vector3(2.08165e-12, 1, 2.08165e-12)
spread = 0.853
initial_velocity_min = 0.3
initial_velocity_max = 0.3
gravity = Vector3(2.08165e-12, 0.3, 2.08165e-12)
scale_min = 2.0
scale_max = 3.0
scale_curve = SubResource("CurveTexture_st3no")
color = Color(1, 1, 1, 0.235294)
alpha_curve = SubResource("CurveTexture_7yq5w")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_k3mb8"]
transparency = 2
alpha_scissor_threshold = 0.077
alpha_antialiasing_mode = 0
blend_mode = 1
cull_mode = 2
shading_mode = 0
vertex_color_use_as_albedo = true
albedo_color = Color(0.678, 0.678, 0.678, 1)
albedo_texture = ExtResource("33_7j817")
disable_receive_shadows = true
billboard_mode = 3
billboard_keep_scale = true
particles_anim_h_frames = 1
particles_anim_v_frames = 1
particles_anim_loop = false

[sub_resource type="QuadMesh" id="QuadMesh_cxfwg"]
material = SubResource("StandardMaterial3D_k3mb8")

[node name="KinematicFpsController" type="CharacterBody3D" groups=["player"]]
collision_mask = 3
floor_snap_length = 0.5
script = ExtResource("2_8r0nc")
material_audios = Array[ExtResource("10_3id2w")]([SubResource("Resource_ju83a"), SubResource("Resource_3rmwo"), SubResource("Resource_rfw5k"), SubResource("Resource_kvpuo")])
water_material_audio = SubResource("Resource_kvpuo")
crouch_audios = Array[AudioStream]([ExtResource("19_dvqy3"), ExtResource("20_0e40x"), ExtResource("21_8kmms"), ExtResource("22_rfhmk")])
uncrouch_audios = Array[AudioStream]([ExtResource("23_326x3"), ExtResource("24_knso1"), ExtResource("25_0xsk3")])
head_bob_x_curve = SubResource("Curve_l0i00")
head_bob_y_curve = SubResource("Curve_3qcwd")
underwater_env = ExtResource("2_owsda")
muzzle_flash_alpha_curve = SubResource("Curve_4wj6w")
tracer_scene = ExtResource("3_83nad")
bullet_impact_scene = ExtResource("2_86agt")
enable_shooting = false

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.85, 0)
shape = SubResource("CapsuleShape3D_fn1rj")

[node name="Center" type="Node3D" parent="CollisionShape3D"]
unique_name_in_owner = true

[node name="Head" type="Marker3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2.08165e-12, 1.31, 2.08165e-12)

[node name="Camera3D" type="Camera3D" parent="Head"]
fov = 80.0

[node name="Melee" type="Node3D" parent="Head/Camera3D"]
unique_name_in_owner = true
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 0, 0)

[node name="Weapon" type="Node3D" parent="Head/Camera3D"]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.303, -0.307, -0.334)
visible = false

[node name="Gun" parent="Head/Camera3D/Weapon" instance=ExtResource("28_e1ex1")]
transform = Transform3D(-7.71288e-09, 0, 0.17645, 0, 0.17645, 0, -0.17645, 0, -7.71288e-09, 0, 0, 0)

[node name="BulletStart" type="Node3D" parent="Head/Camera3D/Weapon/Gun"]
unique_name_in_owner = true
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 3.59774, 0.614418, 1.19209e-07)

[node name="MuzzleFlash1" type="MeshInstance3D" parent="Head/Camera3D/Weapon/Gun/BulletStart"]
unique_name_in_owner = true
transform = Transform3D(-4.33224, 0, -5.19769e-07, 0, 2.49424, 0, 3.78738e-07, 0, -5.94547, -2.38419e-07, 0, 2.77231)
material_override = SubResource("StandardMaterial3D_f8tu5")
mesh = SubResource("PlaneMesh_8kq7a")

[node name="MuzzleFlash2" type="MeshInstance3D" parent="Head/Camera3D/Weapon/Gun/BulletStart"]
unique_name_in_owner = true
transform = Transform3D(1.89368e-07, -2.49424, -2.65721e-13, -4.33224, -1.09027e-07, -5.19769e-07, 3.78738e-07, 3.03968e-13, -5.94547, -2.38419e-07, 0, 2.77231)
material_override = SubResource("StandardMaterial3D_f8tu5")
mesh = SubResource("PlaneMesh_8kq7a")

[node name="MuzzleFlash3" type="MeshInstance3D" parent="Head/Camera3D/Weapon/Gun/BulletStart"]
unique_name_in_owner = true
transform = Transform3D(2.83218, 4.97662e-13, 4.11235e-15, 8.49728e-22, -1.23799e-07, -2.83218, -4.81202e-13, 2.83218, -1.23799e-07, -1.19209e-07, 0, 0.942238)
material_override = SubResource("StandardMaterial3D_a6b2b")
mesh = SubResource("PlaneMesh_h6ix3")

[node name="Smoke" type="GPUParticles3D" parent="Head/Camera3D/Weapon/Gun/BulletStart"]
unique_name_in_owner = true
transform = Transform3D(0.817327, 0, 5.37073e-15, 0, 0.817327, 0, 5.22585e-16, 0, 0.817327, 0, 0.0328035, 0.402218)
lifetime = 3.0
randomness = 0.2
fixed_fps = 60
visibility_aabb = AABB(-1.62292, -1.09174, -1.68963, 3.18206, 4.79947, 3.20341)
local_coords = true
process_material = SubResource("ParticleProcessMaterial_6lf27")
draw_pass_1 = SubResource("QuadMesh_cxfwg")

[node name="HeadRayCast" type="RayCast3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.85, 0)
target_position = Vector3(2.08165e-12, 0.85, 2.08165e-12)
collision_mask = 3

[node name="GroundRayCast" type="RayCast3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.85, 0)
target_position = Vector3(2.08165e-12, -1.2, 2.08165e-12)
collision_mask = 3

[node name="SwimRayCast" type="RayCast3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2.08165e-12, 1.7, 2.08165e-12)
target_position = Vector3(2.08165e-12, -1.7, 2.08165e-12)
collision_mask = 8
hit_from_inside = true
collide_with_areas = true
collide_with_bodies = false

[node name="JumpAudioStreamPlayer" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("20_qovk2")
bus = &"Effects"
attenuation_filter_db = -65.4

[node name="StepAudioStreamPlayer" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("20_qovk2")
bus = &"Effects"
attenuation_filter_db = -65.4

[node name="LandAudioStreamPlayer" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("20_qovk2")
bus = &"Effects"
attenuation_filter_db = -65.4

[node name="CrouchAudioStreamPlayer" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("20_qovk2")
pitch_scale = 3.0
bus = &"Effects"
attenuation_filter_db = -65.4

[node name="UncrouchAudioStreamPlayer" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("20_qovk2")
pitch_scale = 4.0
bus = &"Effects"
attenuation_filter_db = -65.4

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="CenterContainer1" type="CenterContainer" parent="MarginContainer"]
clip_contents = true
layout_mode = 2

[node name="BloodVignette" type="TextureRect" parent="MarginContainer/CenterContainer1"]
unique_name_in_owner = true
modulate = Color(1, 1, 1, 0)
layout_mode = 2
texture = ExtResource("33_8itrj")
expand_mode = 1
script = ExtResource("34_lxet5")

[node name="BloodFlash" type="TextureRect" parent="MarginContainer"]
unique_name_in_owner = true
modulate = Color(1, 1, 1, 0)
layout_mode = 2
texture = ExtResource("35_gwmon")
expand_mode = 1

[node name="CenterContainer2" type="CenterContainer" parent="MarginContainer"]
clip_contents = true
layout_mode = 2

[node name="Crosshair" type="TextureRect" parent="MarginContainer/CenterContainer2"]
custom_minimum_size = Vector2(20, 20)
layout_mode = 2
texture = ExtResource("35_xwe6x")
expand_mode = 1
